--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.10",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.16.2",
     "axios": "^1.7.2",
@@ -39,6 +40,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "serve-static": "^1.15.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
