--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@types/multer": "^1.4.11",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
+    "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
